<resources>
    <string name="app_name">Summary</string>
    <string name="loading">正在加载...</string>
    <string name="net_data_null">数据返回为空</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="login">登录</string>
    <string name="function">核心功能</string>
    <string name="music">我的音乐</string>
    <string name="contact">联系我们</string>
    <string name="notification">发送通知</string>
    <string name="search">搜索</string>
    <string name="wan_android">玩安卓</string>
    <string name="home">首页</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="fly">fly</string>
    <string name="wheel">轮子</string>
    <string name="mine">我的</string>
    <string name="distance">远方</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_function">辅助功能</string>
    <string name="multi_layout">多布局</string>
    <string name="collection">收藏</string>
    <string name="expandbleList">二级列表</string>
    <string name="jump">跳过</string>
</resources>
